compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__import_type_duplicate.snap
---
source: compiler-core/src/type_/tests/imports.rs
assertion_line: 213
expression: "import one.{One, type One}\n\npub fn main() -> One {\n  todo\n}\n"
---
error: Duplicate type definition
  ┌─ /src/one/two.gleam:1:13
  │
1 │ import one.{One, type One}
  │             ^^^  ^^^^^^^^ Redefined here
  │             │     
  │             First defined here

The type `One` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

